// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with props 1`] = `
<section
  className="hard-sides soft-half-ends"
>
  <SectionItem
    hide={[Function]}
    sections={Object {}}
  />
  <SectionItem
    hide={[Function]}
    sections={Object {}}
  />
</section>
`;

exports[`test renders with props 1`] = `
<section
  className="hard-sides soft-half-ends">
  <SectionItem
    hide={[Function]}
    sections={Object {}} />
  <SectionItem
    hide={[Function]}
    sections={Object {}} />
</section>
`;
